--- a/NunoGomesControlToolkit-Source/NunoGomesControlToolkit-Source/NunoGomesControlToolkit.csproj
+++ b/NunoGomesControlToolkit-Source/NunoGomesControlToolkit-Source/NunoGomesControlToolkit.csproj
@@ -41,6 +41,10 @@
   <ItemGroup>
     <Compile Include="Configuration\NamingConfiguration.cs" />
     <Compile Include="Configuration\NamingSection.cs" />
+    <Compile Include="UI\Control.cs" />
+    <Compile Include="UI\HtmlControls\HtmlAnchor.cs" />
+    <Compile Include="UI\HtmlControls\HtmlGenericControl.cs" />
+    <Compile Include="UI\HtmlControls\HtmlLink.cs" />
     <Compile Include="UI\MasterPage.cs">
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
@@ -82,6 +86,7 @@
     <Compile Include="Configuration\NamingProvider.cs" />
     <Compile Include="Configuration\NamingProviderCollection.cs" />
     <Compile Include="Configuration\ShortIDsProvider.cs" />
+    <Compile Include="UI\WebControls\WebControl.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
